--- a/app/design/frontend/base/default/template/tag/customer/recent.phtml
+++ b/app/design/frontend/base/default/template/tag/customer/recent.phtml
@@ -9,6 +9,8 @@
  * @copyright   Copyright (c) 2024 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
+
+/** @var Mage_Tag_Block_Customer_Recent $this */
 ?>
 <div class="box-account box-tags">
     <div class="box-head">
