--- a/app/design/frontend/base/default/template/catalog/product/view/options/type/date.phtml
+++ b/app/design/frontend/base/default/template/catalog/product/view/options/type/date.phtml
@@ -28,10 +28,8 @@
 
     <?php if (!$this->useCalendar()): ?>
     <script type="text/javascript">
-    //<![CDATA[
-        Event.observe('options_<?= $_optionId ?>_month', 'change', dateOption.reloadMonth.bind(dateOption));
-        Event.observe('options_<?= $_optionId ?>_year', 'change', dateOption.reloadMonth.bind(dateOption));
-    //]]>
+        document.getElementById('options_<?= $_optionId ?>_month').addEventListener('change', dateOption.reloadMonth.bind(dateOption));
+        document.getElementById('options_<?= $_optionId ?>_year').addEventListener('change', dateOption.reloadMonth.bind(dateOption));
     </script>
     <?php endif ?>
 
@@ -44,29 +42,29 @@
 
     <input type="hidden" name="validate_datetime_<?= $_optionId ?>" class="validate-datetime-<?= $_optionId ?>" value="" />
     <script type="text/javascript">
-    //<![CDATA[
-<?php if ($_option->getIsRequire()): ?>
-        Validation.addAllThese(
-        [
-                ['validate-datetime-<?= $_optionId ?>', '<?= $this->jsQuoteEscape( Mage::helper('catalog')->__('This is a required option') ) ?>', function(v) {
-                   var dateTimeParts = $$('.datetime-picker[id^="options_<?= $_optionId ?>"]');
-                   for (var i=0; i < dateTimeParts.length; i++) {
-                       if (dateTimeParts[i].value == "") return false;
-                   }
-                   return true;
-                }]
-        ]
+    <?php if ($_option->getIsRequire()): ?>
+        Validation.add(
+            'validate-datetime-<?= $_optionId ?>',
+            '<?= $this->jsQuoteEscape( Mage::helper('catalog')->__('This is a required option') ) ?>',
+            function(v) {
+                const dateTimeParts = document.querySelectorAll('.datetime-picker[id^="options_<?= $_optionId ?>"]');
+                for (let i = 0; i < dateTimeParts.length; i++) {
+                    if (dateTimeParts[i].value === "") return false;
+                }
+                return true;
+            }
         );
-<?php else: ?>
+    <?php else: ?>
         Validation.add(
             'validate-datetime-<?= $_optionId ?>',
             '<?= $this->jsQuoteEscape( Mage::helper('catalog')->__('Field is not complete') ) ?>',
             function(v) {
-                var dateTimeParts = $$('.datetime-picker[id^="options_<?= $_optionId ?>"]');
-                var hasWithValue = false, hasWithNoValue = false;
-                var pattern = /day_part$/i;
-                for (var i=0; i < dateTimeParts.length; i++) {
-                    if (! pattern.test(dateTimeParts[i].id)) {
+                const dateTimeParts = document.querySelectorAll('.datetime-picker[id^="options_<?= $_optionId ?>"]');
+                let hasWithValue = false;
+                let hasWithNoValue = false;
+                const pattern = /day_part$/i;
+                for (let i = 0; i < dateTimeParts.length; i++) {
+                    if (!pattern.test(dateTimeParts[i].id)) {
                         if (dateTimeParts[i].value === "") {
                             hasWithValue = true;
                         } else {
@@ -77,7 +75,6 @@
                 return hasWithValue ^ hasWithNoValue;
             }
         );
-<?php endif ?>
-    //]]>
+    <?php endif ?>
     </script>
 </dd>
