--- a/app/design/frontend/rwd/default/template/checkout/cart/coupon.phtml
+++ b/app/design/frontend/rwd/default/template/checkout/cart/coupon.phtml
@@ -32,17 +32,19 @@
     </div>
 </form>
 <script type="text/javascript">
-//<![CDATA[
-var discountForm = new VarienForm('discount-coupon-form');
-discountForm.submit = function (isRemove) {
-    if (isRemove) {
-        $('coupon_code').removeClassName('required-entry');
-        $('remove-coupone').value = "1";
-    } else {
-        $('coupon_code').addClassName('required-entry');
-        $('remove-coupone').value = "0";
+    const discountForm = new VarienForm('discount-coupon-form');
+    discountForm.submit = function(isRemove) {
+        const couponCode = document.getElementById('coupon_code');
+        const removeCoupon = document.getElementById('remove-coupone');
+
+        if (isRemove) {
+            couponCode.classList.remove('required-entry');
+            removeCoupon.value = "1";
+        } else {
+            couponCode.classList.add('required-entry');
+            removeCoupon.value = "0";
+        }
+
+        return this.form.submit();
     }
-    return VarienForm.prototype.submit.bind(discountForm)();
-}
-//]]>
 </script>
