--- a/app/design/frontend/base/default/template/checkout/cart/shipping.phtml
+++ b/app/design/frontend/base/default/template/checkout/cart/shipping.phtml
@@ -31,9 +31,7 @@
                             <option value=""><?= $this->__('Please select region, state or province') ?></option>
                         </select>
                        <script type="text/javascript">
-                       //<![CDATA[
-                           $('region_id').setAttribute('defaultValue',  "<?= $this->getEstimateRegionId() ?>");
-                       //]]>
+                           document.getElementById('region_id').setAttribute('defaultValue', "<?= $this->getEstimateRegionId() ?>");
                        </script>
                        <input type="text" id="region" name="region" value="<?= $this->escapeHtml($this->getEstimateRegion()) ?>"  title="<?= Mage::helper('core')->quoteEscape($this->__('State/Province')) ?>" class="input-text" style="display:none;" />
                    </div>
@@ -59,9 +57,7 @@
             </div>
         </form>
         <script type="text/javascript">
-        //<![CDATA[
             new RegionUpdater('country', 'region', 'region_id', <?= Mage::helper('directory')->getRegionJsonByStore() ?>);
-        //]]>
         </script>
 
         <?php if (($_shippingRateGroups = $this->getEstimateRates())): ?>
@@ -99,28 +95,16 @@
         </form>
         <?php endif ?>
         <script type="text/javascript">
-        //<![CDATA[
             var coShippingMethodForm = new VarienForm('shipping-zip-form');
             var countriesWithOptionalZip = <?= $this->helper('directory')->getCountriesWithOptionalZip(true) ?>;
 
             coShippingMethodForm.submit = function () {
-                var country = $F('country');
-                var optionalZip = false;
-
-                for (i=0; i < countriesWithOptionalZip.length; i++) {
-                    if (countriesWithOptionalZip[i] == country) {
-                        optionalZip = true;
-                    }
-                }
-                if (optionalZip) {
-                    $('postcode').removeClassName('required-entry');
-                }
-                else {
-                    $('postcode').addClassName('required-entry');
-                }
+                const country = document.getElementById('country').value;
+                const optionalZip = countriesWithOptionalZip.includes(country);
+                const postcodeElement = document.getElementById('postcode');
+                postcodeElement.classList.toggle('required-entry', !optionalZip);
                 return VarienForm.prototype.submit.bind(coShippingMethodForm)();
-            }
-        //]]>
+            };
         </script>
     </div>
 </div>
