--- a/app/design/frontend/base/default/template/page/html/cookienotice.phtml
+++ b/app/design/frontend/base/default/template/page/html/cookienotice.phtml
@@ -20,7 +20,6 @@
     </div>
 </div>
 <script type="text/javascript">
-    /* <![CDATA[ */
     function allowSaveCookie() {
         Mage.Cookies.set('<?= Mage_Core_Helper_Cookie::IS_USER_ALLOWED_SAVE_COOKIE ?>', '<?= Mage::helper('core/cookie')->getAcceptedSaveCookiesWebsiteIds()?>', new Date(new Date().getTime() + <?= Mage::helper('core/cookie')->getCookieRestrictionLifetime() ?> * 1000));
         if (Mage.Cookies.get('<?= Mage_Core_Helper_Cookie::IS_USER_ALLOWED_SAVE_COOKIE ?>')) {
@@ -29,8 +28,8 @@
             window.location.href = '<?= Mage::getUrl('cms/index/noCookies') ?>';
         }
     }
-    $('notice-cookie-block').show();
-    /* ]]> */
+
+    document.getElementById('notice-cookie-block').style.display = 'block';
 </script>
 <?php endif ?>
 
