--- a/app/design/frontend/base/default/template/sales/order/creditmemo.phtml
+++ b/app/design/frontend/base/default/template/sales/order/creditmemo.phtml
@@ -15,33 +15,28 @@
 <div class="order-items order-details">
 <?php if($this->canDisplayGiftmessage()): ?>
     <script type="text/javascript">
-    //<![CDATA[
-    function giftMessageToogle(giftMessageIdentifier)
-    {
-        var link = $('order-item-gift-message-link-'+giftMessageIdentifier);
-        var container = $('order-item-gift-message-'+giftMessageIdentifier);
-        var row = $('order-item-row-'+giftMessageIdentifier);
+        function giftMessageToogle(giftMessageIdentifier) {
+            const link = document.getElementById('order-item-gift-message-link-' + giftMessageIdentifier);
+            const container = document.getElementById('order-item-gift-message-' + giftMessageIdentifier);
+            const row = document.getElementById('order-item-row-' + giftMessageIdentifier);
 
-
-        if(link.expanded) {
-            link.expanded = false;
-            link.removeClassName('expanded');
-            if(container.hasClassName('last')) {
-                row.addClassName('last');
+            if (link.expanded) {
+                link.expanded = false;
+                link.classList.remove('expanded');
+                if (container.classList.contains('last')) {
+                    row.classList.add('last');
+                }
+                container.style.display = 'none';
+            } else {
+                link.expanded = true;
+                link.classList.add('expanded');
+                if (container.classList.contains('last')) {
+                    row.classList.remove('last');
+                }
+                container.style.display = 'block';
             }
-            container.hide();
-        } else {
-            link.expanded = true;
-            link.addClassName('expanded');
-            if(container.hasClassName('last')) {
-                row.removeClassName('last');
-            }
-            container.show();
+            return false;
         }
-
-        return false;
-    }
-    //]]>
     </script>
 <?php endif ?>
     <?= $this->getChildHtml('creditmemo_items') ?>
