--- a/app/design/frontend/rwd/default/template/page/popup.phtml
+++ b/app/design/frontend/rwd/default/template/page/popup.phtml
@@ -13,7 +13,7 @@
 /** @var Mage_Page_Block_Html $this */
 ?>
 <!DOCTYPE html>
-<html lang="<?= $this->getLang() ?>" id="top" class="no-js">
+<html lang="<?= $this->getLang() ?>" id="top">
 <head>
 <?= $this->getChildHtml('head') ?>
 </head>
