RWD: simplified layered template in order to avoid content layout shift

--- a/app/design/frontend/base/default/template/catalog/layer/view.phtml
+++ b/app/design/frontend/base/default/template/catalog/layer/view.phtml
@@ -9,28 +9,19 @@
  * @copyright   Copyright (c) 2024 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
-?>
-<?php
-/**
- * Category layered navigation
- *
- * @see Mage_Catalog_Block_Layer_View
- * @var Mage_Catalog_Block_Layer_View $this 
- */
+
+/** @var Mage_Catalog_Block_Layer_View $this */
 ?>
 <?php if($this->canShowBlock()): ?>
 <div class="block block-layered-nav">
-    <div class="block-title">
-        <strong><span><?= $this->__('Shop By') ?></span></strong>
-    </div>
-    <div class="block-content">
+    <div class="block-content toggle-content">
         <?= $this->getStateHtml() ?>
         <?php if ($this->getLayer()->getState()->getFilters()): ?>
             <div class="actions"><a href="<?= $this->getClearUrl() ?>"><?= $this->__('Clear All') ?></a></div>
         <?php endif ?>
         <?php if($this->canShowOptions()): ?>
-            <p class="block-subtitle"><?= $this->__('Shopping Options') ?></p>
-            <dl id="narrow-by-list">
+            <p class="block-subtitle block-subtitle--filter"><?= $this->__('Filter') ?></p>
+            <dl id="narrow-by-list" class="no-display">
                 <?php $_filters = $this->getFilters() ?>
                 <?php foreach ($_filters as $_filter): ?>
                 <?php if($_filter->getItemsCount()): ?>
