--- a/app/design/frontend/base/default/template/catalog/seo/sitemap.phtml
+++ b/app/design/frontend/base/default/template/catalog/seo/sitemap.phtml
@@ -24,10 +24,9 @@
         <?= $this->__('There are no %s available.', $this->getItemsTitle()) ?>
     </p>
     <script type="text/javascript">
-    //<![CDATA[
-        if ($('sitemap_top_links') != undefined) {
-            $('sitemap_top_links').hide();
+        const sitemapTopLinks = document.getElementById('sitemap_top_links');
+        if (sitemapTopLinks) {
+            sitemapTopLinks.style.display = 'none';
         }
-    //]]>
     </script>
 <?php endif ?>
