--- a/app/design/frontend/base/default/template/catalog/product/view/media.phtml
+++ b/app/design/frontend/base/default/template/catalog/product/view/media.phtml
@@ -37,11 +37,9 @@
     <img id="zoom_in" src="<?= $this->getSkinUrl('images/slider_btn_zoom_in.gif') ?>" alt="<?= Mage::helper('core')->quoteEscape($this->__('Zoom In')) ?>" title="<?= Mage::helper('core')->quoteEscape($this->__('Zoom In')) ?>" class="btn-zoom-in" />
 </div>
 <script type="text/javascript">
-//<![CDATA[
-    Event.observe(window, 'load', function() {
+    window.addEventListener('load', function() {
         product_zoom = new Product.Zoom('image', 'track', 'handle', 'zoom_in', 'zoom_out', 'track_hint');
     });
-//]]>
 </script>
 <?php else: ?>
 <p class="product-image">
